<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TraditionalSearchFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="352dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/traditional_search"
        android:textAlignment="center"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cartItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digit_the_item_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.404"
        tools:targetApi="o" />

    <Button
        android:id="@+id/cartBtn"
        android:layout_width="347dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>
