<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AngSmartItemFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/ang_text_market_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/dsadsaadasd"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView

        android:id="@+id/ang_single_items"
        style="@style/Widget.AppCompat.Light.ListView.DropDown"
        android:layout_width="379dp"
        android:layout_height="419dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:dividerHeight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ang_text_market_name" />

    <Button
        android:id="@+id/item_button_pay"

        android:background="#DCE0F7"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pay"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ang_single_items"
        app:layout_constraintVertical_bias="0.621" />

    <Button
        android:id="@+id/item_button_find"
        android:background="#DCE0F7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/find_close_market"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/item_button_pay"
        app:layout_constraintTop_toBottomOf="@+id/ang_single_items"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/ang_text_view_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/ang_single_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/ang_text_market_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

</android.support.constraint.ConstraintLayout>